# SentinXFL

./: .env.example  .gitignore  DAILY_SCRUM.md  GETTING_STARTED.md  MAJOR_PROJECT_BUSINESS_PRESENTATION.md  MASTER_APPLICATION_STRATEGY.md  PHASE1_IMPLEMENTATION_PLAN.md  README.md  V2_ROADMAP.md  pyproject.toml  scrum_tracker.json
app/dashboard/: sentinxfl_demo.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  hooks.ts  index.ts  knowledge.ts
dashboard/src/components/: ClientLayout.tsx  EmployeeLayout.tsx  Layout.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/pages/: Dashboard.tsx  Explainability.tsx  FLTraining.tsx  Login.tsx  Privacy.tsx  Transactions.tsx
dashboard/src/pages/client/: ClientDashboard.tsx  ClientReports.tsx  ClientUpload.tsx
dashboard/src/pages/employee/: BankMonitor.tsx  EmergentMonitor.tsx  GlobalOverview.tsx  GlobalReports.tsx  PatternManagement.tsx
data/patterns/: pattern_index.json
docs/: METHODOLOGY.md  RESULTS_ANALYSIS.md  TECHNICAL_REPORT.md
knowledge/: ARCHITECTURE.md  BACKEND_SCHEMA.md  COMPLIANCE.md  CREDITS.md  DATASETS.md  FRONTEND_GUIDELINES.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  JIRA_TASKS.md  PRD.md  README.md  SECURITY.md  SETUP_GUIDE.md  TECH_STACK.md  TESTING_STRATEGY.md
logs/: security_audit.json
notebooks/: federated_gpt_trainer.py  federated_learning.py  genai_embedding_model.py  llama_randomizer_trainer.py  ollama_integration.py  pii_cleaner.py  sentinxfl_comprehensive_demo.py
security/: __init__.py  pii_guard.py  pii_validator.py
src/api/: inference_api.py
src/core/: step4_federated_standalone.py
src/database/: __init__.py  local_db.py
src/encryption/: __init__.py  paillier_aggregator.py
src/federation/: __init__.py  multi_org_manager.py
src/genai/classifiers/: fraud_classifier.py
src/genai/generators/: narrative_generator.py
src/inference/: __init__.py  cpu_optimizer.py
src/sentinxfl/: __init__.py  cli.py
src/sentinxfl/api/: __init__.py  app.py  main.py
src/sentinxfl/api/routes/: auth.py  (+8 more)
src/sentinxfl/core/: __init__.py  config.py  logging.py
src/sentinxfl/data/: __init__.py  loader.py  schemas.py  splitter.py
src/sentinxfl/fl/: __init__.py  aggregators.py  client.py  server.py  simulator.py
src/sentinxfl/intelligence/: __init__.py  central_model.py  emergent_detector.py  pattern_library.py  pattern_miner.py  report_generator.py
src/sentinxfl/llm/: __init__.py  explainer.py  provider.py  rag.py
src/sentinxfl/ml/: __init__.py  base.py  ensemble.py  isolation_model.py  lightgbm_model.py  metrics.py  pipeline.py  registry.py  tabnet_model.py  xgboost_model.py
src/sentinxfl/privacy/: __init__.py  accountant.py  audit.py  certifier.py  detector.py  dp_trainer.py  mechanisms.py  transformer.py
src/sentinxfl/utils/: __init__.py
tests/: __init__.py  conftest.py  test_knowledge.py  test_multi_org.py  test_sprint1.py  test_sprint2_ml.py  test_sprint3_fl_dp.py  test_sprint4_llm.py  test_sprint5_dashboard.py
