[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinxfl"
version = "2.0.0"
description = "Privacy-First Federated Fraud Detection Platform"
readme = "README.md"
license = {text = "Proprietary - Academic Use Only"}
requires-python = ">=3.11"
authors = [
    {name = "Anshuman Bakshi", email = "anshuman.bakshi@srmist.edu.in"},
]
keywords = ["fraud-detection", "federated-learning", "privacy", "differential-privacy", "xai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Data Processing
    "polars>=0.20.0",
    "duckdb>=0.9.2",
    "pyarrow>=14.0.0",
    
    # ML Core
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "imbalanced-learn>=0.11.0",
    
    # Deep Learning (CPU-friendly)
    "torch>=2.1.0",
    "pytorch-tabnet>=4.1.0",
    
    # Federated Learning
    "flwr>=1.6.0",
    
    # Privacy
    "opacus>=1.4.0",
    "autodp>=0.2.1",
    
    # LLM & RAG
    "transformers>=4.37.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    
    # XAI
    "shap>=0.44.0",
    "lime>=0.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "orjson>=3.9.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.28.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
sentinxfl = "sentinxfl.cli:main"

[project.urls]
Homepage = "https://github.com/anshumanbakshi/SentinXFL"
Documentation = "https://sentinxfl.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/sentinxfl --cov-report=term-missing"
